# reader

./: .gitignore  README.md  build-flatpak.sh  io.github.myueqf.reader.json  meson.build
.github/workflows/: build-flatpak.yml
data/: gschemas.compiled  io.github.myueqf.reader.appdata.xml.in  io.github.myueqf.reader.desktop.in  io.github.myueqf.reader.gschema.xml  meson.build
resources/: QAQ.css  dark.css  meson.build  resources.gresource.xml  style.css
src/: application.vala  book-edit-dialog.vala  book-item.vala  book-manager.vala  book-shelf.vala  book.vala  chapter-list.vala  config-manager.vala  main.vala  reader-view.vala  settings-dialog.vala  window.vala
